# quasar

./: .gitignore  CMakeLists.txt  DEMO.md  PROJECT.md  README.md  SESSIONS.md
apps/: main.cpp
bench/: golden.py
capstone/: portfolio_qaoa.py  test_portfolio_qaoa.py
capstone/data/: returns_sample.csv
examples/: ghz3.qasm
include/quasar/: algorithms.hpp  circuit.hpp  circuit_json.hpp  fusion.hpp  gates.hpp  golden.hpp  qasm.hpp  statevector.hpp  types.hpp  version.hpp
src/: algorithms.cpp  circuit.cpp  circuit_json.cpp  fusion.cpp  gates.cpp  golden.cpp  qasm.cpp  statevector.cpp
tests/: test_algorithms.cpp  test_bench.cpp  test_blas.cpp  test_circuit.cpp  test_fusion.cpp  test_statevector.cpp
